argocd/media-server/jellyfin/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/icon: jellyfin
    gethomepage.dev/description: ""
    gethomepage.dev/pod-selector: app=jellyfin
  labels:
    app: jellyfin-app
  name: jellyfin-httproute
  namespace: jellyfin
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - jellyfin.yanello.net
  rules:
    - backendRefs:
        - name: jellyfin
          namespace: jellyfin
          port: 8096
